--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -3,6 +3,10 @@
     max-width: 500px;
     font-family: sans-serif;
 }
+.siteTitle {
+    font-weight: 600;
+    font-size: 3rem;
+}
 .heading {
     color: rebeccapurple;
   }
